--- a/ClinicaWeb/JyGDreams/templates/index.html
+++ b/ClinicaWeb/JyGDreams/templates/index.html
@@ -47,7 +47,7 @@
             <i class="bi bi-file-bar-graph-fill icon"></i>
             <h5 class="card-title">Estadisticas</h5>
             <p class="card-text">Revisa como va la clinica en numeros</p>
-            <a href="{% url 'stadistic' %}" class="btn btn-emerald">Revisar estadisticas</a>
+            <a href="{% url 'estadisticas' %}" class="btn btn-emerald">Revisar estadisticas</a>
         </div>
     </div>
 </div>
