--- a/ClinicaWeb/JyGDreams/templates/detail_pago.html
+++ b/ClinicaWeb/JyGDreams/templates/detail_pago.html
@@ -35,7 +35,7 @@
 
     <div class="mb-3">
       <label class="form-label fw-bold fs-5 text-success">Monto Final</label>
-      <input type="text" class="form-control text-end fw-bold fs-5 text-success" value="${{ monto_final }}" disabled>
+      <input type="text" class="form-control text-end fw-bold fs-5 text-success" value="C${{ monto_final }}" disabled>
     </div>
 
     <div class="d-grid mt-4">
