--- a/ClinicaWeb/JyGDreams/templates/edit_pago.html
+++ b/ClinicaWeb/JyGDreams/templates/edit_pago.html
@@ -37,7 +37,7 @@
         <div class="col-md-6 offset-md-6">
           <div class="d-flex justify-content-between align-items-center">
             <strong class="fs-5">Monto Final:</strong>
-            <span id="monto-final" class="form-control text-success fw-bold text-end" readonly>${{ monto_final }}</span>
+            <span id="monto-final" class="form-control text-success fw-bold text-end" readonly>C${{ monto_final }}</span>
           </div>
         </div>
       </div>
