--- a/ClinicaWeb/JyGDreams/templates/detail_expediente.html
+++ b/ClinicaWeb/JyGDreams/templates/detail_expediente.html
@@ -9,14 +9,14 @@
 {% block content %}
 <div class="container py-5">
 
-  <h2 class="mb-4 text-primary">
+  <h2 class="mb-4">
     <i class="bi bi-journal-text me-2"></i>
     Detalles del Expediente de {{ expediente.paciente.nombre }} {{ expediente.paciente.apellido }}
   </h2>
 
   <!-- FECHA DE REGISTRO -->
   <div class="card p-4 shadow-sm mb-4">
-    <h5 class="fw-bold text-primary"><i class="bi bi-calendar-check me-2"></i>Fecha de Registro</h5>
+    <h5 class="fw-bold"><i class="bi bi-calendar-check me-2"></i>Fecha de Registro</h5>
     <div class="row">
       <div class="col-md-4">
         <input type="text" class="form-control bg-light" value="{{ expediente.fecha_registro|date:'d/m/Y' }}" readonly>
